include greeting mp3 files but not generated

--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Generated audio files
-*.mp3
+# generated audio
+speech.mp3
